# MirrorMind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  reddit_post.txt
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d5b0c93c6d1_add_user_provider_settings.py  9920f7d4dbbf_add_users_and_production_clones.py  a1b2c3d4e5f6_add_extensions_table.py  b2c3d4e5f6a7_add_style_profile_to_persona.py  c3d4e5f6a7b8_add_persona_owner_id.py  d4e5f6a7b8c9_add_memory_images_table.py
backend/app/: main.py  seed.py
backend/app/agents/: definitions.py
backend/app/api/: admin.py  agent_configs.py  auth.py  extensions.py  graph.py  interviews.py  io.py  memories.py  memory_images.py  personas.py  policies.py  production.py  testing.py  training.py  writing_samples.py
backend/app/core/: access.py  cache.py  config.py  deps.py  encryption.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/evaluation/: scoring.py
backend/app/graphrag/: ingestion.py  neo4j_client.py  retrieval.py  schema.py
backend/app/ingestion/: document_parser.py  profile_merge.py
backend/app/models/: agent_config.py  extension.py  interview.py  memory_image.py  persona.py  policy.py  production.py  testing.py  user.py
backend/app/schemas/: core.py  memory_image.py  persona.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_clone_engine.py  test_crud.py  test_document_parser.py  test_profile_merge.py  test_provider_settings.py
(+43 files in other folders)
