[project]
name = "mirrormind"
version = "0.1.6"
description = "MirrorMind — build and deploy high-fidelity AI clones of real people"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "neo4j>=5.26.0",
    "openai-agents>=0.1.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "pgvector>=0.3.6",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "orjson>=3.10.0",
    "pypdf>=5.4.0",
    "websockets>=13.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
